# f3grid_converter

./: .gitignore  CMakeLists.txt  README.md
basic/: macro.h  typedef.h
basic/data structure/: priority_queue.h
basic/geometrical predicates/: predicates_Shewchuk.cpp  predicates_Shewchuk.h  predicates_wrapper.cpp  predicates_wrapper.h
src/: main.cpp
src/algorithm/: extract_six_surface.h
src/basic/: typedef.h
src/basic/data structure/: memory_pool.h
src/basic/math/: vector3.h
src/config/: config_loader.cpp  config_loader.h
src/mesh loader/: mesh_loader.cpp  mesh_loader.h
src/utils/file/: file_path.cpp  file_path.h
src/utils/log/: log.cpp  log.h
src/utils/string/: string_utils.cpp  string_utils.h
src/utils/timer/: timer.cpp  timer.h
third/VTK/: CMakeLists.txt
third/tbb/: CMakeLists.txt
